# daliea

./: README.rst  pyproject.toml  requirements.txt  setup.py
daliea/: chromosome.py  daliea.py  evolution.py  gene.py  interface.py
