[tool.poetry]
name = "daliea"
version = "0.1.0"
description = ""
authors = ["Bruno Morgado <jb.morgado@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
flake8 = "*"
pep8 = "*"
autopep8 = "*"
numpy = "*"
pyside2 = "*"
wheel = "*"
pillow-simd = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
